--- a/package.json
+++ b/package.json
@@ -2,15 +2,9 @@
   "name": "attendance-calendar",
   "version": "1.0.0",
   "description": "a calendar javascript api which help you display your attendance data in calendar format",
-  "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "browser-sync": "^2.26.3",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^4.0.2"
-  },
+  "main": "gulpfile.js",
   "scripts": {
-    "dev": "gulp"
+   "dev":"gulp"
   },
   "repository": {
     "type": "git",
@@ -21,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/jitangupta/attendance-calendar/issues"
   },
-  "homepage": "https://github.com/jitangupta/attendance-calendar#readme"
+  "homepage": "https://github.com/jitangupta/attendance-calendar#readme",
+  "devDependencies": {
+    "browser-sync": "^2.26.3",
+    "gulp": "^4.0.0",
+    "gulp-sass": "^4.0.2"
+  }
 }
